# VectorGraphicViewer

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
assets/: default_100_es.frag  default_100_es.vert  default_330_core.vert
cmake/: copy_asset.cmake
src/: AbstractSample.h  AttributeInfo.h  CMakeLists.txt  CPUUsage.cpp  CPUUsage.h  Example.h  Example01_Texture.cpp  Example01_Texture.h  IndexBuffer.h  Sample00_Welcome.cpp  Sample00_Welcome.h  Sample01_PNG.cpp  Sample01_PNG.h  Sample01_Texture.cpp  Sample01_Texture.h  Sample02_SVG_Trig.cpp  Sample02_SVG_Trig.h  Sample02_VG_Trig.cpp  Sample02_VG_Trig.h  Sample03_VG_Stencil.cpp  Sample03_VG_Stencil.h  SampleData.h  Shader.cpp  Shader.h  ShaderProgram.cpp  ShaderProgram.h  Texture.cpp  Texture.h  VertexBuffer.h  VertexData.h  ViewerApp.cpp  ViewerApp.h  main.cpp
src/assets/: color_100_es.frag  color_100_es.vert  color_330_core.frag  color_330_core.vert  tex_100_es.frag  tex_100_es.vert  tex_330_core.frag  vcolor_100_es.frag  vcolor_100_es.vert  vcolor_330_core.frag  vcolor_330_core.vert
src/utils/: AbstractGPUObject.cpp  AbstractGPUObject.h  AbstractSample.h  AttributeInfo.h  BitMask.h  Color.cpp  Color.h  GPUObjectRegistry.cpp  GPUObjectRegistry.h  IndexBuffer.cpp  MemoryUsage.cpp  MemoryUsage.h  Shader.cpp  ShaderProgram.cpp  ShaderProgram.h  StringUtils.h  Triangle.h  VectorGraphic.cpp  VectorGraphic.h  VertexBuffer.cpp  VertexBuffer.h  VertexData.h  ViewerApp.cpp  ViewerApp.h
